Fix shadows and spacing on mobile

--- a/Elements/Form/scss/DragUpload.scss
+++ b/Elements/Form/scss/DragUpload.scss
@@ -9,6 +9,6 @@ zn-drag-upload {
   }
 
   p {
-    @apply text-md font-normal text-dark-400 leading-6;
+    @apply text-md font-normal text-dark-400 leading-6 text-center;
   }
 }
