--- a/Elements/Form/scss/TextInput.scss
+++ b/Elements/Form/scss/TextInput.scss
@@ -7,11 +7,11 @@ zn-text-input {
 }
 
 zn-text-input span {
-  @apply text-md font-normal text-dark-600 leading-6 p-sm bg-dark-100 mr-sm border-r border-border;
+  @apply text-md font-normal text-dark-600 leading-6 p-sm bg-dark-100 border-r border-border;
 }
 
 zn-text-input input {
   @apply placeholder:text-md placeholder:font-normal placeholder:text-dark-400 placeholder:leading-6;
   @apply sm:text-md sm:p-sm;
-  @apply p-0 border-none outline-none;
+  @apply p-0 pl-sm border-none outline-none shadow-inner;
 }
