--- a/scss/form.scss
+++ b/scss/form.scss
@@ -18,7 +18,7 @@ form {
   textarea,
   select,
   [multiple] {
-    @apply block w-full rounded-md border border-border shadow-sm bg-white shadow-inner;
+    @apply block w-full rounded-md border border-border bg-white shadow-inner;
     @apply focus:border-primary-500 focus:ring-primary-500;
     @apply sm:text-md sm:p-sm;
     @apply placeholder:text-md placeholder:font-normal placeholder:text-dark-400 placeholder:leading-6;
